# multimodal-rag-demo

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py  telemetry.py
app/adapters/: __init__.py
app/adapters/auth/: base.py  bypass_auth.py  github_oauth.py
app/adapters/db/: __init__.py  mysql.py  sqlite.py
app/adapters/document_conversion/: __init__.py  base.py  libreoffice.py  markdown_to_pdf.py  text_to_pdf.py
app/adapters/model_clients/: base.py  embedding_openai.py  llm_openai.py  (+1 more)
app/db/: base.py  session.py
app/domain/: enums.py  exceptions.py
app/pipelines/: __init__.py
app/services/: __init__.py  auth_service.py  chat_service.py  document_service.py  ingestion_service.py  monitoring_service.py  retrieval_service.py  storage_service.py
app/utils/: files.py  hashes.py  ids.py  images.py  pagination.py
app/web/: __init__.py  dependencies.py
app/workers/: ingest_worker.py  runner.py
ops/docker/: Dockerfile.web  Dockerfile.worker  docker-compose.local.yml
ops/k8s/: deployment-web.yaml  deployment-worker.yaml  ingress.yaml  service.yaml
scripts/: dev_web.py  dev_worker.py  init_db.py
tests/: fakes.py
tests/integration/: test_chat_flow.py  test_upload_ingest.py
tests/unit/: test_auth_bypass.py  test_chat_templates.py  test_embedding_client.py  test_llm_client_langchain.py  test_llm_fallback.py  test_object_store.py  test_object_store_s3.py  test_retrieval_defaults.py  test_retrieval_neighbors.py  test_settings.py  test_storage_service.py  test_vector_store.py
(+83 files in other folders)
